# aor_rust

./: .gitignore  CameraMatrixReader.cs  Cargo.toml  Config.cs  Entity.cs  EntityFinderGom.cs  EntityListFinder.cs  GameFinder.cs  HeapScanner.cs  IMemoryReader.cs  InputController.cs  Makefile  MemoryReader.cs  PlayerNameFinder.cs  Program.cs  STATUS_R30.md  anti_afk.py  aor_scanner.csproj  aor_scanner.slnx  aor_smoke.sh  aor_smoke_dry.sh  aor_web_panel_README.md  config.toml  filter_il2cpp_json.py  rva_to_offset.py  web_panel.py
Frida/: IDA_FindPlayerIdByGOM.js  _probe.js  analyze_elf_signatures.py  analyze_gom_structure.js  bucket_traverse.js  call_get_gom.js  call_get_gom2.js  check_components.js  check_e_current.py  check_instance.js  check_modules.js  check_my_node_in_gom.js  check_regions.py  check_types.py  check_unityplayer.js  check_vtable.py  debug_bridge.js  debug_coords.js  debug_exports.js  debug_func.js  debug_list.py  debug_mcached.py  debug_tagged_nodes.js  deep_gom_scan.js  deep_gom_scan2.js  deep_scan_z12.js  direct_verify.js  dump_all7.py  dump_all_entities.js  dump_go_and_transform.js  dump_name_binder_classes.js  dump_only_targets.js  dump_player_at_addr.js  dump_transform.js  dump_transform.py  entity_enumerator.py  enumerate_all.js  feed_webpanel.py  find_albion_pid.py  find_cachedptr_in_components.js  (+164 more)
IDA/: IDA_01_cr0_ael_real_addr.py  IDA_02_ck1_af_xrefs.py  IDA_03_search_operation_codes.py  IDA_04_dump_il2cpp_at.py  IDA_05_find_photon_dispatch.py  IDA_06_keysync_search.py  IDA_07_find_by_fde.py  IDA_08_search_immediates.py  analyze_bts2.py  (+21 more)
(+38 files in other folders)
