[package]
name = "albion_kernel"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
opt-level = 3
strip = true

[dependencies]
libc = "0.2"
once_cell = "1.19"

[[bin]]
name = "albion_kernel"
path = "src/main.rs"

[[bin]]
name = "web_panel"
path = "src/web_panel.rs"

